--- a/includes/_append.fragment-css.html
+++ b/includes/_append.fragment-css.html
@@ -1,3 +1,4 @@
 <link href="assets/css/logos.css" rel="stylesheet"/>
 <link href="assets/css/colours.css" rel="stylesheet" />
 <link href="assets/css/fonts.css" rel="stylesheet" />
+<link href="assets/css/swagger-ui.css" rel="stylesheet" />
