--- a/includes/_append.fragment-header.html
+++ b/includes/_append.fragment-header.html
@@ -11,3 +11,26 @@
   <img alt="HISO logo" src="assets/images/hiso-logo.png" height="35"/>
 </div>
 -->
+
+<!-- where a page contains a div with an id of 'swagger-ui' the following script will load the swagger-ui into that div -->
+<script src="assets/js/swagger-ui-bundle.js"></script>
+<script type="text/javascript">
+  window.onload = function () {
+    // Check if the element with the ID 'swagger-ui' exists in the DOM
+    var swaggerContainer = document.getElementById('swagger-ui');
+    if (swaggerContainer) {
+      const ui = SwaggerUIBundle({
+        url: "assets/hnz.openapi.yaml",
+        dom_id: '#swagger-ui',
+        deepLinking: true,
+        presets: [
+          SwaggerUIBundle.presets.apis,
+          SwaggerUIBundle.SwaggerUIStandalonePreset
+        ],
+        layout: "BaseLayout",
+        showExtensions: true,
+        showCommonExtensions: true
+      });
+    }
+  };
+</script>
