--- a/includes/_append.fragment-header.html
+++ b/includes/_append.fragment-header.html
@@ -13,7 +13,7 @@
 -->
 
 <!-- if an IG is hosted on HNZ infrastructure we can include additional scripts -->
-{% if site.data.fhir.canonical contains 'health.digital.nz' %}
+{% if site.data.fhir.canonical contains 'digital.health.nz' %}
   <script src="assets/js/swagger-ui-bundle.js"></script>
   <!-- where a page contains a div with an id of 'swagger-ui' the following script will load the swagger-ui into that div -->
   <script type="text/javascript">
