--- a/includes/_append.fragment-header.html
+++ b/includes/_append.fragment-header.html
@@ -22,7 +22,7 @@
       var swaggerContainer = document.getElementById('swagger-ui');
       if (swaggerContainer) {
         const ui = SwaggerUIBundle({
-          url: "/openapi.yaml",
+          url: "./openapi.yaml",
           dom_id: '#swagger-ui',
           deepLinking: true,
           presets: [
