--- a/includes/_append.fragment-header.html
+++ b/includes/_append.fragment-header.html
@@ -1,5 +1,5 @@
 <div id="tewhatuora-logo">
-  <img alt="Te Whatu Ora logo" src="assets/images/tewhatuora-logo.png" height="28"/>
+  <img alt="Te Whatu Ora logo" src="assets/images/tewhatuora-logo.svg" height="28"/>
 </div>
 
 <div id="hiso-logo">
